force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Target_Generation__mdt/Target_Generation__mdt.object-meta.xml
<CustomObject>
    <label>Target Generation</label>
    <pluralLabel>Target Generation</pluralLabel>
</CustomObject>