force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Target_Generation__mdt/fields/Generation_End_Month__c.field-meta.xml
<CustomField>
    <fullName>Generation_End_Month__c</fullName>
    <label>Generation End Month</label>
    <length>20</length>
    <type>Text</type>
</CustomField>